--- a/public/scss/_loginSignupForgotUserPass.scss
+++ b/public/scss/_loginSignupForgotUserPass.scss
@@ -129,6 +129,7 @@
     border-radius: 25px;
     border: none;
     background-color: $minus-blue;
+    color: $chalkboard-green
 }
 .landing-login-form-button{
     height:40px;
@@ -217,7 +218,7 @@
     border-radius: 3px;
     @include center-flex;
     padding: 0rem 0.5rem 0 1rem;
-    gap: 1rem;
+    gap: 1em;
     height: 45px;
     border: 2px solid white;
     width: 264px;
