--- a/public/scss/_media.scss
+++ b/public/scss/_media.scss
@@ -774,7 +774,7 @@
     .operator-group,
     .activity-group {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
     }
 
