--- a/public/scss/_brand.scss
+++ b/public/scss/_brand.scss
@@ -5,7 +5,7 @@
     left: 5vw;
     display: flex;
     align-items: center;
-    width: 330px;
+    width: auto;
     font-family: 'Monomaniac One';
     font-size: 22px;
     color: $chalk-white;
