--- a/public/scss/_profile.scss
+++ b/public/scss/_profile.scss
@@ -26,7 +26,7 @@
     width: 80px;
     height: 80px;
     border-radius: 50%;
-    z-index:5;
+    z-index:25;
 }
 
 .change-avatar {
@@ -171,14 +171,14 @@
 }
 
 .avatar-user-icons img {
-    width: 100%;
+    // width: 100%;
     // max-width: 100px;
     // height: auto;
     cursor: pointer;
 }
 
 .avatar-modal-icon {
-    width: 6em;
+    max-width: 6em;
     max-height: 6em;
     border-radius: 3em;
 }
