--- a/public/scss/_highScoreChallengeAndQuiz.scss
+++ b/public/scss/_highScoreChallengeAndQuiz.scss
@@ -7,7 +7,7 @@
   align-items: center;
 }
 
-.question {
+.question-field{
   @include center-flex;
   font-family: $chalkboardFont;
   font-size: 2em;
