--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -15,6 +15,7 @@
 @import './privacy.scss';
 @import './landing.scss';
 @import './timesTables.scss';
+@import './lessonsFractions';
 @import './shared';
 @import './burger.scss';
 @import './media.scss';
