Update Lesson Plan and Layout

--- a/public/views/learningFractions.ejs
+++ b/public/views/learningFractions.ejs
@@ -22,9 +22,9 @@
     <%- include('partials/_brand') %>
 
         <div class="main-container" id="main-container">
-          <%- include('partials/_fractionsLesson') %>
+          <%- include('partials/_fractions') %>
         </div>
-        <script type="module" src="/js/lessonsFractions.js"></script>
+        <script type="module" src="/js/fractionsNavigation.js"></script>
         <script type="module" src="/js/burger.js"></script>
 </body>
 
