--- a/public/scss/_lessonsFractions.scss
+++ b/public/scss/_lessonsFractions.scss
@@ -1,40 +1,88 @@
-.fraction-carousel-container {
-    overflow: hidden;
+
+  
+.fraction-lesson-container{
+  /*   width: 600px; */
+    
+    margin: 0 auto;
+  }
+  
+  .lessons-header {
+    text-align: center;
+    color:$chalk-white;
+    text-decoration: underline;
+  }
+  .lessons-bottom{
+    display:flex;
+    flex-direction:column;
+  }
+  .buttons{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    width:100%;
+  }
+  .fraction-carousel-container {
+    width: 400px;
+    height: 400px;
+    // overflow: hidden;
+    position: relative;
+    max-width: 90vw;
+    max-height: 60vh;
   }
   
   .fraction-carousel {
     display: flex;
     transition: transform 0.3s ease-in-out;
+
+    position:relative;
   }
   
   .fraction-lesson {
-    flex: 0 0 100%;
-  /*   padding: 20px; */
-  }
-  
-  .fraction-lesson h2 {
-    font-size: 24px;
-    color:$chalk-white;
-  }
-  
-  .fraction-lesson p {
-    font-size: 16px;
-    color:$chalk-white;
+    position:absolute;
+    top:0;
+    display:flex;
+    flex-direction:column;
+  /*   width: 600px; */
+    // left:100%;
+    margin-right: 20px;
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
 
-  }
-  
-  /* Mobile-first CSS */
-  @media screen and (min-width: 768px) {
-    .fraction-carousel {
-      width: calc(100% * 4);
+    justify-content: center;
+    align-items: center;
+    &>*{
+      color:$chalk-white;
     }
   }
   
-  .previous-btn,
-  .next-btn {
-    margin: 10px;
-    padding: 8px 16px;
+  .fraction-lesson.active {
+    top:0;
+
+    opacity: 1;
+    left:0;
+  }
+  .fraction-lesson.fraction-left {
+    opacity: 1;
+    // left:-100;
+  }
+  .fraction-previous-btn,
+  .fraction-next-btn {
+    display: block;
+    margin: 0 auto;
+    width: 100px;
+    height: 40px;
+    background-color: #555;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
     font-size: 16px;
+    cursor: pointer;
   }
   
+  .lessons-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0;
+  }
   
