--- a/public/views/partials/_fractions.ejs
+++ b/public/views/partials/_fractions.ejs
@@ -10,12 +10,23 @@
           <h2>Understanding Fractions</h2>
           <p>Fractions have two parts. The upper (Numerator) and the lower (Denominator), seperated by a line. </p>
           <p> One way of visualizing fractions would be to look at a pizza that has 8 slices. </p>
+          <div class="lesson-section">
+
           <img src="../../assets/pizza_8-r.png" width="80" height="80" alt="8-Pizza-Slices">
+         <h1> =  </h1>
+          <h1>
+           <sup>8</sup>/<sub>8</sub>
+          </h1> 
+          </div>
           <p>If we have 3 out of 8 possible slices of a pizza, we can represent it as
             <sup>3</sup>/<sub>8</sub>.
           </p>
-          <img src="../../assets/pizza_3-r.png" width="80" height="80" alt="3-Pizza-Slices">
-
+          <div class="lesson-section">
+          <img src="../../assets/pizza_3-r.png" width="80" height="80" alt="3-Pizza-Slices"> 
+         <h1> =  </h1>
+          
+          <h1> <sup>3</sup>/<sub>8</sub> </h1>
+</div>
         </div>
         <div class="fraction-lesson ">
           <!-- Content for the upper and lower parts of fractions using pizza examples -->
@@ -27,38 +38,79 @@
           <p>Example:
             (10 slices pizza) is equal to 1 whole 8-slice pizza plus
             2 extra slices:
-            <sup>10</sup>/<sub>8</sub> = <sup>8</sup>/<sub>8</sub> + <sup>2</sup>/<sub>8</sub>.
-            <img src="../../assets/pizza_8-r.png" width="80" height="80" alt="8-Pizza-Slices">
+          
+          <sup>10</sup>/<sub>8</sub> = <sup>8</sup>/<sub>8</sub> + <sup>2</sup>/<sub>8</sub> = 1 <sup> 2</sup>/<sub>8</sub>.
+        </p>
+        
+<div class="lesson-section">
+  <h1> <sup>10</sup>/<sub>8</sub></h1>
+          <h1> = </h1>
+          <img src="../../assets/pizza_8-r.png" width="80" height="80" alt="8-Pizza-Slices">
+          <h1> + </h1>
+             
             <img src="../../assets/pizza_2-r.png" width="80" height="80" alt="2-Pizza-Slices">
-
-          </p>
+     
+          </div>
+     
         </div>
 
         <div class="fraction-lesson">
           <!-- Content for comparing fractions using pizza examples -->
           <h2>Comparing Fractions</h2>
-          <p>When comparing fractions, if the lower number (Denominator) is the same for both fractions. then you can
+          <p>Here are some general guidelines for comparing simple fractions.</p>
+          <p>If the lower number (Denominator) is the same for both fractions. then you can
             simply compare the top two numbers.</p>
 
 
           <p>For example, if we have <sup>3</sup>/<sub>8</sub> of a pizza and our friend has <sup>2</sup>/<sub>8</sub>
             of a pizza, we can see that our fraction of the pizza is larger because we have more slices.</p>
-          <img src="../../assets/pizza_3-r.png" width="80" height="80" alt="3-Pizza-Slices">
-          <img src="../../assets/pizza_2-r.png" width="80" height="80" alt="2-Pizza-Slices">
-        </div>
+            <div class="lesson-section">
 
+          <img src="../../assets/pizza_3-r.png" width="80" height="80" alt="3-Pizza-Slices">
+          <h1> > </h1>
+          
+          <img src="../../assets/pizza_2-r.png" width="80" height="80" alt="2-Pizza-Slices">
+          </div>
+          <div class="lesson-section">
+           <h1> <sup>3</sup>/<sub>8</sub></h1> <h1> ></h1><h1> <sup>2</sup>/<sub>8</sub></h1>
+          </div>
+
+        
+        </div>
         <div class="fraction-lesson">
           <!-- Content for comparing fractions using pizza examples -->
-          <h2>Equal Fractions</h2>
+          <h2>Comparing Fractions 2</h2>
+          
+          <p>If the Numerator (top number) is the same, then the fraction with the biggest denominator (lower number) will be the smaller fraction</p>
+          <p>This can sometimes be confusing, but what it means is that the larger the bottom number, the smaller the parts of the fraction</p>
+          <div class="lesson-section">
+            <h1> <sup>1</sup>/<sub>4</sub></h1> <h1> ></h1><h1> <sup>1</sup>/<sub>8</sub></h1>
+           </div>
+           <div class="lesson-section">
+
+            <img src="../../assets/pizza_quarter.png" width="80" height="80" alt="Quarter-Pizza">
+            <h1 class="comparison-operator-pizza"> > </h1>
+            
+            <img src="../../assets/pizza_1-r.png" width="80" height="80" alt="1-Pizza-Slices">
+            </div>
+        </div>
+        <div class="fraction-lesson">
+          <!-- Content for comparing fractions using pizza examples -->
+          <h2>Equivalent Fractions</h2>
           <p>The same fraction can be represented in different ways, and still equal the same amount.</p>
 
-          <p>Eexample, if we have 4 slices (<sup>4</sup>/<sub>8</sub>) of a pizza, we could also say we have half
+          <p>For example, if we have 4 slices (<sup>4</sup>/<sub>8</sub>) of an 8 slice pizza, we could also say we have half
             (<sup>1</sup>/<sub>2</sub>) of a pizza. </p>
+            <div class="lesson-section">
+              <img src="../../assets/pizza_half.png" width="80" height="80" alt="Half-Pizza">
+              <h1>=</h1>
 
           <img src="../../assets/pizza_4-r.png" width="80" height="80" alt="4-Pizza-Slices">
+        </div>
+
           <p>
             Both fractions are equivalent, or equal. If you multiply (or divide) the top and bottom parts of a fraction
-            by the same number the result is equal in value.
+            by the same number the result is equal in value. This is a useful trick for when we want to perform subtraction or addition to fractions, and have to find common denominators.
           </p>
         </div>
         <div class="fraction-lesson">
@@ -71,9 +123,19 @@
           <p>Example: If we have 1 slice (<sup>1</sup>/<sub>8</sub>) of a pizza and we then have two
             (<sup>2</sup>/<sub>8</sub>) of
             another pizza, we get a total of 3 slices (<sup>3</sup>/<sub>8</sub>).</p>
-          <img src="../../assets/pizza_1-r.png" width="80" height="80" alt="1-Pizza-Slices">
-          <img src="../../assets/pizza_2-r.png" width="80" height="80" alt="2-Pizza-Slices">
-          <img src="../../assets/pizza_3-r.png" width="80" height="80" alt="3-Pizza-Slices">
+            <div class="lesson-section">
+              <img src="../../assets/pizza_1-r.png" width="80" height="80" alt="1-Pizza-Slices">
+
+              <h1>+</h1>
+              <img src="../../assets/pizza_2-r.png" width="80" height="80" alt="2-Pizza-Slices">
+              <h1>=</h1>
+
+              <img src="../../assets/pizza_3-r.png" width="80" height="80" alt="3-Pizza-Slices">
+            </div>
+            <div class="lesson-section">
+              <h1><sup>1</sup>/<sub>8</sub></h1> <h1> +</h1>  <h1><sup>2</sup>/<sub>8</sub></h1> <h1>=</h1>  <h1><sup>3</sup>/<sub>8</sub></h1>
+            </div>
+
         </div>
 
         <div class="fraction-lesson">
@@ -85,9 +147,17 @@
           <p>Example: If we have 5 slices (<sup>5</sup>/<sub>8</sub>) of a pizza and we give 2 slices away (
             <sup>2</sup>/<sub>8</sub>),
             we are left with 3 slices ( <sup>3</sup>/<sub>8</sub>).</p>
+            <div class="lesson-section">
           <img src="../../assets/pizza_5-r.png" width="80" height="80" alt="5-Pizza-Slices">
+          <h1>-</h1>
           <img src="../../assets/pizza_2-r.png" width="80" height="80" alt="2-Pizza-Slices">
+          <h1>=</h1>
+
           <img src="../../assets/pizza_3-r.png" width="80" height="80" alt="3-Pizza-Slices">
+              </div>
+            <div class="lesson-section">
+              <h1><sup>5</sup>/<sub>8</sub></h1><h1> -</h1><h1> <sup>2</sup>/<sub>8</sub></h1><h1> =</h1><h1> <sup>3</sup>/<sub>8</sub></h1>
+            </div>
 
         </div>
 
@@ -102,8 +172,14 @@
             amount ( 3 or
             <sup>3</sup>/<sub>1</sub>), we get a total of 6 slices <sup>6</sup>/<sub>8</sub> slices.
           </p>
+          <div class="lesson-section">
           <img src="../../assets/pizza_2-r.png" width="80" height="80" alt="2-Pizza-Slices">
+          <h1> x </h1><h1> 3</h1><h1>   =</h1> 
           <img src="../../assets/pizza_6-r.png" width="80" height="80" alt="6-Pizza-Slices">
+        </div>
+        <div class="lesson-section">
+          <h1><sup>2</sup>/<sub>8</sub></h1> <h1>x</h1> <h1><sup>3</sup>/<sub>1</sub></h1><h1> =</h1><h1> <sup>6</sup>/<sub>8</sub></h1>
+        </div>
         </div>
 
         <div class="fraction-lesson">
@@ -114,26 +190,56 @@
 
           <p>For example, if we have <sup>8</sup>/<sub>8</sub> of a pizza and we divide it equally among 2 people, each
             person will have <sup>4</sup>/<sub>8</sub> of the pizza.</p>
+          <div class="lesson-section">
+
           <img src="../../assets/pizza_8-r.png" width="80" height="80" alt="8-Pizza-Slices">
+          <h1>  ÷ 2  = </h1> 
+
           <img src="../../assets/pizza_4-r.png" width="80" height="80" alt="4-Pizza-Slices">
+        </div>
+        <div class="lesson-section">
+          <h1><sup>8</sup>/<sub>8</sub> </h1>  <h1>÷</h1>  <h1> 2</h1><h1>  =</h1> <h1> <sup>4</sup>/<sub>8</sub></h1>
+        </div>
+        <p>Or, you can write this like:</p>
+        <div class="lesson-section">
+          <h1><sup>8</sup>/<sub>8</sub> </h1> <h1> x </h1><h1> <sup>1</sup>/<sub>2</sub> </h1><h1>=</h1><h1> <sup>8</sup>/<sub>16</sub></h1> <h1>= </h1><h1><sup>4</sup>/<sub>8</sub></h1>
+        </div>
         </div>
 
         <div class="fraction-lesson">
           <!-- Content for comparing fractions using pizza examples -->
           <h2>Working with Fractions</h2>
-          <p>If the denominator (lower number) is different for two fractions, and we want to compare of perform
-            addition/subtraction, we have to find a 'Common Denominator'.</p>
+          <p>If the lower number is different for two fractions, and we want to add or subtract them, we have to find a 'Common Denominator' (common lower number).</p>
 
 
-          <p>For example, if we have half ( <sup>1</sup>/<sub>2</sub>) of a pizza and our friend has a quarter of the
+          <p>If we have half ( <sup>1</sup>/<sub>2</sub>) of a pizza and our friend has a quarter of the
             pizza (<sup>1</sup>/<sub>8</sub>)
-            we would need to find the lowest common denominator to add the two. </p>
-          <p> How: <sup>1</sup>/<sub>2</sub> could also be written as <sup>4</sup>/<sub>8</sub> since they are equal to
-            eachother. Since <sup>4</sup>/<sub>8</sub> and <sup>1</sup>/<sub>8</sub> have the same common denominator of
-            8, they can be added easily to make<sup>5</sup>/<sub>8</sub> </p>
-          <img src="../../assets/pizza_4-r.png" width="80" height="80" alt="4-Pizza-Slices">
-          <img src="../../assets/pizza_1-r.png" width="80" height="80" alt="1-Pizza-Slices">
-          <img src="../../assets/pizza_5-r.png" width="80" height="80" alt="5-Pizza-Slices">
+            we would need to find a common denominator to find out how much pizza we have. </p>
+
+          <p> <sup>1</sup>/<sub>2</sub> can also be written as <sup>4</sup>/<sub>8</sub> , they are equal to
+            same amount. Since <sup>4</sup>/<sub>8</sub> and <sup>1</sup>/<sub>8</sub> have the same common denominator of
+            8, the numerators (4 and 1) can be added  to make <sup>5</sup>/<sub>8</sub> </p>
+          <div class="lesson-section">
+
+            <img src="../../assets/pizza_half.png" width="60" height="60" alt="half-Pizza">
+            <h1>  + </h1> 
+
+            <img src="../../assets/pizza_1-r.png" width="60" height="60" alt="1-Pizza-Slices">
+            <h1>  = </h1> 
+
+          <img src="../../assets/pizza_5-r.png" width="60" height="60" alt="5-Pizza-Slices">
+          </div>
+          <div class="lesson-section">
+            <img src="../../assets/pizza_4-r.png" width="60" height="60" alt="4-Pizza-Slices">
+            <h1>  + </h1> 
+
+          <img src="../../assets/pizza_1-r.png" width="60" height="60" alt="1-Pizza-Slices">
+          <h1>  = </h1> 
+
+          <img src="../../assets/pizza_5-r.png" width="60" height="60" alt="5-Pizza-Slices">
+          </div>
+        </div>
+
         </div>
         <!-- Add more lessons here -->
       </div>
