--- a/public/scss/_lessonsFractions.scss
+++ b/public/scss/_lessonsFractions.scss
@@ -22,44 +22,84 @@
     width:100%;
   }
   .fraction-carousel-container {
-    width: 400px;
-    height: 400px;
+    width: 600px;
+    height:600px;
     // overflow: hidden;
+    overflow-y: scroll;
     position: relative;
     max-width: 90vw;
-    max-height: 60vh;
+    max-height: 65vh;
+    border-radius:10px;
+    padding:10px 0;
+    margin-bottom:10px;
+    display: flex;
+    justify-content: center;
+    
+    &:hover{
+      border:2px solid $chalk-white;
+    }
+    &:focus{
+      border:2px solid $chalk-white;
+    }
   }
   
   .fraction-carousel {
     display: flex;
     transition: transform 0.3s ease-in-out;
-
-    position:relative;
+    max-height:500px;
+  justify-content: center;
+    // position:relative;
   }
   
   .fraction-lesson {
     position:absolute;
     top:0;
-    display:flex;
+    display:none;
     flex-direction:column;
-  /*   width: 600px; */
+   max-width: 90vw; 
     // left:100%;
-    margin-right: 20px;
+    // margin-right: 20px;
     opacity: 0;
     transition: all 0.3s ease-in-out;
-
+    // overflow-y:scroll;
     justify-content: center;
     align-items: center;
+    &>p{
+      font-size:0.9rem;
+      margin:3px 0;
+    }
     &>*{
       color:$chalk-white;
     }
+    & > h2{
+      font-size:1.4rem;
+      font-style:italic;
+      padding-bottom:10px;
+    }
+    &>p{
+      line-height:28px;
+      text-align: left;
+      max-width:375px;
+    }
+
   }
-  
+
+  sup, sub
+{
+    height: 0;
+    line-height: 1;
+    vertical-align: baseline;
+
+    position: relative;
+}
+
+sup { bottom: 1ex; }
+sub { top: .5ex; }
   .fraction-lesson.active {
     top:0;
-
+    display: flex;
     opacity: 1;
-    left:0;
+    // left:0;
   }
   .fraction-lesson.fraction-left {
     opacity: 1;
@@ -77,6 +117,7 @@
     border-radius: 5px;
     font-size: 16px;
     cursor: pointer;
+    z-index:20;
   }
   
   .lessons-bottom {
@@ -85,4 +126,22 @@
     align-items: center;
     padding: 10px 0;
   }
-  
+  .lesson-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width:90%;
+    margin: 15px;
+    // flex-wrap: wrap;
+    &>h1{
+      font-size:1.8rem;
+    }
+    &>*{
+      // flex-wrap: wrap;
+      margin:2px 10px;
+    }
+  }
+  .comparison-operator-pizza{
+    align-self: flex-start;
+  }
