--- a/public/scss/_lessonsFractions.scss
+++ b/public/scss/_lessonsFractions.scss
@@ -25,7 +25,7 @@
     width: 600px;
     height:600px;
     // overflow: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     position: relative;
     max-width: 90vw;
     max-height: 65vh;
