--- a/public/scss/_lessonsFractions.scss
+++ b/public/scss/_lessonsFractions.scss
@@ -10,6 +10,9 @@
     text-align: center;
     color:$chalk-white;
     text-decoration: underline;
+    &>h1{
+      font-size:1.7rem;
+    }
   }
   .lessons-bottom{
     display:flex;
@@ -28,18 +31,22 @@
     overflow-y: auto;
     position: relative;
     max-width: 90vw;
-    max-height: 65vh;
+    max-height: 60vh;
     border-radius:10px;
     padding:10px 0;
     margin-bottom:10px;
     display: flex;
     justify-content: center;
-    
+    border: 2px solid rgba(255,255,255,0.05);
+    padding:10px;
     &:hover{
-      border:2px solid $chalk-white;
+      // border:2px solid $chalk-white;
+      background: rgba(255,255,255,0.05);
     }
     &:focus{
-      border:2px solid $chalk-white;
+      // border:2px solid $chalk-white;
+      background: rgba(255,255,255,0.05);
+
     }
   }
   
@@ -56,7 +63,8 @@
     top:0;
     display:none;
     flex-direction:column;
-   max-width: 90vw; 
+    max-width: 90vw; 
+    padding:10px;
     // left:100%;
     // margin-right: 20px;
     opacity: 0;
@@ -65,19 +73,19 @@
     justify-content: center;
     align-items: center;
     &>p{
-      font-size:0.9rem;
-      margin:3px 0;
+      font-size:0.85rem;
+      margin:5px 0;
     }
     &>*{
       color:$chalk-white;
     }
     & > h2{
-      font-size:1.4rem;
+      font-size:1.1rem;
       font-style:italic;
       padding-bottom:10px;
     }
     &>p{
-      line-height:28px;
+      line-height:30px;
       text-align: left;
       max-width:375px;
     }
@@ -131,15 +139,15 @@ sub { top: .5ex; }
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    width:90%;
-    margin: 15px;
+    width:100%;
+    margin: 10px;
     // flex-wrap: wrap;
     &>h1{
-      font-size:1.8rem;
+      font-size:1.2rem;
     }
     &>*{
       // flex-wrap: wrap;
-      margin:2px 10px;
+      margin:2px 5px;
     }
   }
   .comparison-operator-pizza{
