--- a/public/scss/_menus.scss
+++ b/public/scss/_menus.scss
@@ -305,6 +305,8 @@
     border-radius: 100%;
     min-width: 2.5em;
     min-height: 2.5em;
+    height:60px;
+    width:60px;
     aspect-ratio:1/1;
     display: flex;
     align-items: center;
