Update Reset Pass
add

--- a/public/scss/_flashMessages.scss
+++ b/public/scss/_flashMessages.scss
@@ -2,7 +2,8 @@
 //flash
 
 .login-flash-message,
-.signup-flash-message {
+.signup-flash-message,
+.reset-password-flash-message {
     width: 100%;
     height: auto;
     padding: 10px;
@@ -13,7 +14,8 @@
 .login-flash-message.error,
 .signup-flash-message.error,
 .forgot-password-flash-message.error,
-.forgot-username-flash-message.error {
+.forgot-username-flash-message.error,
+.reset-password-flash-message.error {
     background-color: pink;
     color: red;
     font-family: roboto;
@@ -26,7 +28,8 @@
 .login-flash-message.success,
 .signup-flash-message.success,
 .forgot-password-flash-message.success,
-.forgot-username-flash-message.success {
+.forgot-username-flash-message.success,
+.reset-password-flash-message.success {
     background-color: rgb(107, 216, 129);
     color: rgb(16, 75, 15);
     font-family: roboto;
