--- a/public/views/resetPassword.ejs
+++ b/public/views/resetPassword.ejs
@@ -46,8 +46,8 @@
                 </div>
               </div>
               <div>
-                <label for="'confirm-password">Confirm Password:</label>
-                <div class="input-shell">
+                <label class="reset-password-label" for="'confirm-password">Confirm Password:</label>
+                <div class="input-shell reset-password-shell" >
                   <i class="input-icon fa-regular fa-key"></i>
                   <div class="input-seperator"></div>
                   <input class="form-input" type="password" name="confirm-password" placeholder="Confirm password"
