--- a/public/scss/_loginSignupForgotUserPass.scss
+++ b/public/scss/_loginSignupForgotUserPass.scss
@@ -42,7 +42,7 @@
 .play-as-guest,
 .forgot-password-form-button,
 .forgot-username-form-button,
-.reset-password-button {
+.reset-password-form-button {
     width: 100%;
 }
 
