--- a/public/scss/_media.scss
+++ b/public/scss/_media.scss
@@ -38,7 +38,7 @@
     .expanded-menu a {
         color: $chalkboard-green;
         text-decoration: none;
-        font-size: 14px;
+        font-size: 16px;
     }
 
 
@@ -143,9 +143,9 @@
     }
 
     .nav-button {
-        font-size: 2em;
-        width: 60px;
-        height: 50px;
+        font-size: 1.6em;
+        // width: 60px;
+        // height: 50px;
   
     }
 
@@ -877,9 +877,9 @@
     }
 
     .nav-button {
-        font-size: 2.75em;
-        width: 100px;
-        height: 75px;
+        font-size: 1.6em;
+        // width: 100px;
+        // height: 75px;
     }
 
     // .icon {
@@ -1013,7 +1013,7 @@
     }
 
     .nav-buttons {
-        margin-top: 10px;
+        margin-top: 20px;
     }
 }
 @media screen and (orientation:landscape) and (max-aspect-ratio:1.75) {
