--- a/public/scss/_menus.scss
+++ b/public/scss/_menus.scss
@@ -135,8 +135,8 @@
 
 .nav-button {
     outline: none;
-    border: 0px solid rgba(157, 157, 157, 0);
-    background-color: transparent;
+    border: 2px solid $chalk-white;
+    background-color: $chalkboard-green;
     width: 100px;
     height: 50px;
     transition: all 0.25s cubic-bezier(.25, .8, .25, 1);
@@ -147,19 +147,19 @@
     justify-content: center;
     text-align: center;
     padding: 5px;
-    font-size: 2em;
-    color: #97b7d7;
-    margin: 5px;
+    font-size: 1.6em;
+    color: $chalk-white;
+    margin: 25px;
 
     &:hover {
         transform: scale(1.00);
-        background: -webkit-linear-gradient(225deg, hsla(306, 38%, 73%, 1) 29%, hsla(204, 49%, 70%, 1) 63%, hsla(202, 56%, 74%, 1) 81%, hsla(176, 58%, 72%, 1) 100%);
+        background: $chalk-white;
         cursor: pointer;
-        border: 0px solid rgba(157, 157, 157, 1);
-        border-radius: 20px;
+        border: 2px solid $chalk-white;
+        border-radius: 30px;
 
         >* {
-            color: rgb(250, 250, 242);
+            color:$chalkboard-green;
         }
     }
 }
