--- a/public/scss/_shared.scss
+++ b/public/scss/_shared.scss
@@ -138,25 +138,29 @@ body {
   }
   
   .titles-group {
-    width: 90%;
-    display: grid;
-    grid-template-areas: "4fr 1fr";
-    grid-gap: 25px;
+    width: 100%;
+    display: flex;
+    // grid-template-areas: "4fr 1fr";
+    // grid-gap: 25px;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-bottom:20px;
   }
   
   .header-text,
   .activity-title,
   .activity-type {
     font-family: $chalkboardFont;
-    font-size: $mobileHeaderTextSize;
+    font-size: 20px;
     text-align: center;
     height: auto;
     width: auto;
     color: $chalk-white;
     padding:10px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
   }
   .welcome-header, .welcome-header-index{
     @include center-flex;
@@ -172,7 +176,7 @@ body {
   }
   
   .correctness {
-    padding: 0.4em;
+    padding: 5px 15px;
   }
   
   .icon-small {
@@ -211,4 +215,57 @@ body {
       color: $chalk-white
     }
   }
-  
+  .activity-title-container,.activity-title-container-menu{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height:70px;
+    width:250px;
+  }
+  .activity-title-container{
+    background-color: rgba(255,255,255,0.1);
+    border-radius: 200px;
+    margin-bottom: 20px;
+    padding: 5px;
+  }
+  .activity-title-container-menu{
+    width:180px;
+  }
+  .selections-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width:100%;
+
+  }
+  .selected-operator-container,.selected-difficulty-container,.selected-operator-container-menu,.selected-difficulty-container-menu{
+    background:#f3e6aa;
+    color:$chalkboard-green;
+    border-radius:20px;
+    padding:5px 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height:30px;
+  }
+  .selected-activity-container,.selected-activity-container-menu{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom:40px;
+
+  }
+  .selected-activity-container-menu{
+    width:250px;
+    background: rgba(255,255,255,0.2);
+    padding: 10px ;
+    border-radius: 30px;
+  }
+  .selected-so-far{
+    @include center-flex;
+    margin-bottom:50px;
+    flex-direction:column;
+  }
+  .selected-activity,.selected-activity-menu{
+    color:$chalk-white;
+  }
