--- a/public/scss/_media.scss
+++ b/public/scss/_media.scss
@@ -239,7 +239,7 @@
     .activity-title
      {
         font-size: 20px;
-        padding-bottom: 20px;
+        // padding-bottom: 20px;
     }
 
     #range-input {
