--- a/public/scss/_multipleChoice.scss
+++ b/public/scss/_multipleChoice.scss
@@ -112,6 +112,7 @@
     grid-area: choices;
 }
 .mc-question-box{
-    background:rgba(244,244,244,0.15);
+    background:rgba(255,255,255,0.1);
     padding:0.5em;
+    border:7px dashed #ffffffb5;
 }
