--- a/public/scss/_highScoreChallengeAndQuiz.scss
+++ b/public/scss/_highScoreChallengeAndQuiz.scss
@@ -10,7 +10,7 @@
 .question-field{
   @include center-flex;
   font-family: $chalkboardFont;
-  font-size: 2em;
+  font-size: 2.2em;
   color: #eae6df;
   text-align: center;
   max-width: 100%;
@@ -271,7 +271,7 @@
   min-width: 4ch;
   border-radius: 20px;
   background: $chalkboard-green;
-  border: 3px dashed $chalk-white;
+  border: 7px dashed $chalk-white;
 
   &:active {
     outline: none;
@@ -291,7 +291,7 @@
   font-size: 16px; 
   color:$chalkboard-green;
   background-color: $wood;
-  color: $chalk-white;
+  color: $chalkboard-green;
   box-shadow: $cardShadow;
   transform: translate(0px, 0px);
   transition: 100ms transform ease, 50ms box-shadow ease;
