Fix MC Practice Build

--- a/public/scss/_shared.scss
+++ b/public/scss/_shared.scss
@@ -247,6 +247,7 @@ body {
     justify-content: center;
     align-items: center;
     height:30px;
+    margin:5px;
   }
   .selected-activity-container,.selected-activity-container-menu{
     display: flex;
